[gd_scene load_steps=6 format=3 uid="uid://wkenhxkun08"]

[ext_resource type="Texture2D" uid="uid://cbyktrwlsxlmk" path="res://asset/img/ui/common/panel-transparent-center-015.png" id="1_51cx1"]
[ext_resource type="Script" path="res://scene/level/ui/cheat_view/cheat_panel_cntr.gd" id="2_atybs"]
[ext_resource type="Texture2D" uid="uid://b2ld66qc6qtdh" path="res://asset/img/ui/level_scene/fold.png" id="3_lu7dj"]
[ext_resource type="Texture2D" uid="uid://i8d5khm5uqb" path="res://asset/img/ui/level_scene/unfold.png" id="3_w0p8u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hjei8"]
texture = ExtResource("1_51cx1")
texture_margin_left = 18.0
texture_margin_top = 11.0
texture_margin_right = 18.0
texture_margin_bottom = 16.0
modulate_color = Color(0.699653, 0.699654, 0.699653, 0.705882)

[node name="cheat_panel_cntr" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_hjei8")
script = ExtResource("2_atybs")
fold_texture = ExtResource("3_lu7dj")
unfold_texture = ExtResource("3_w0p8u")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="vbox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="fold_tex_rect" type="TextureRect" parent="vbox/hbox"]
modulate = Color(0.0687983, 0.0687983, 0.0687982, 1)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("3_w0p8u")
stretch_mode = 5

[node name="name_label" type="Label" parent="vbox/hbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0687983, 0.0687983, 0.0687982, 1)
theme_override_font_sizes/font_size = 30
text = "破解"
horizontal_alignment = 1
vertical_alignment = 2

[node name="space" type="Control" parent="vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="use_btn" type="Button" parent="vbox/hbox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "LS_CHEAT_USE_BTN"

[node name="desc_label" type="Label" parent="vbox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.0687983, 0.0687983, 0.0687982, 1)
theme_override_font_sizes/font_size = 24
autowrap_mode = 3
